--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -9,8 +9,10 @@
 .home .container {
 }
 .home .container .nav {
-  text-align: center;
   padding: 10px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .home .container .nav img {
   height: 90px;
@@ -37,7 +39,6 @@
   height: 300px;
   object-fit: cover;
   width: 230px;
- 
 }
 .home .content .card .box h2 {
   position: absolute;
