--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,9 +37,11 @@ a {
 }
 .slick-slide.slick-current img {
   transform: scale(1.1);
-  transition: 0.5s;
+  transition: transform 0.6s ;
+  transform-style: ease(0.43,0.13,0.23,0.96);
   filter: blur(0px);
   pointer-events: unset;
+  cursor: pointer;
 }
 .slick-slide img {
   filter: blur(3px);
